[package]
name = "rs2io"
version = "0.1.2"
edition = "2021"
exclude = ["macro_utils", "io_macro"]
authors = ["Mack <https://github.com/heavens>"]
description = "Types and utilities for processing io with a design heavily focused around the custom protocols used by the popular MMORPG Runescape."
repository = "https://github.com/heavens"
license = "MIT OR Apache-2.0"
keywords = ["IO", "Bytes", "Encoder", "Decoder"]
rust-version = "1.80.0"

[workspace]
resolver = "2"
members = [
    "io_macro",
    "macro_utils",
]
default-members = [
    "io_macro",
    "macro_utils",
]

[workspace.dependencies.syn]
version = "2.0.98"
features = ["full"]

[workspace.dependencies.quote]
version = "1.0.38"