[package]
name = "rs2io"
version = "0.3.4"
edition = "2021"
exclude = ["macro_utils", "io_macro"]
authors = ["Mack <https://github.com/heavens>"]
description = "Types and utilities for processing io with a design heavily focused around the custom protocols used by the popular MMORPG Runescape."
repository = "https://github.com/heavens"
license = "MIT OR Apache-2.0"
keywords = ["IO", "Bytes", "RuneScape", "GameDev", "Games"]
rust-version = "1.80.0"

[features]
default = []
macros = ["rs2-prot-macro"]

[workspace]
resolver = "2"
members = ["rs2-prot-macro"]


[dependencies]
encoding_rs = "0.8"
num-bigint = "0.4"
memchr = "2.7.5"
rs2-prot-macro = { path = "rs2-prot-macro", version = "0.1.0", optional = true }
